src/elsi.h

void c_elsi_dm_complex_sparse(elsi_handle handle_c,
                              double _Complex *ham,
                              double _Complex *ovlp,
                              double _Complex *dm,
                              double *energy);
void c_elsi_set_output(elsi_handle handle_c,
                       int output);
void c_elsi_set_unit_ovlp(elsi_handle handle_c,
                          int unit_ovlp);
void c_elsi_set_zero_def(elsi_handle handle_c,
                         double zero_def);
void c_elsi_set_sing_check(elsi_handle handle_c,
                           int sing_check);
void c_elsi_set_sing_tol(elsi_handle handle_c,
                         double sing_tol);
void c_elsi_set_sing_stop(elsi_handle handle_c,
                          int sing_stop);
void c_elsi_set_elpa_solver(elsi_handle handle_c,
                            int solver);
void c_elsi_set_elpa_n_single(elsi_handle handle_c,
                              int n_single);
void c_elsi_set_elpa_gpu(elsi_handle handle_c,
                         int gpu);
void c_elsi_set_elpa_gpu_kernels(elsi_handle handle_c,
                                 int gpu_kernels);
void c_elsi_set_elpa_autotune(elsi_handle handle_c,
                              int autotune);
void c_elsi_set_omm_flavor(elsi_handle handle_c,
                           int flavor);
void c_elsi_set_omm_n_elpa(elsi_handle handle_c,
                           int n_elpa);
void c_elsi_set_omm_tol(elsi_handle handle_c,
                        double tol);
void c_elsi_set_pexsi_n_mu(elsi_handle handle_c,
                           int n_mu);
void c_elsi_set_pexsi_n_pole(elsi_handle handle_c,
                             int n_pole);
void c_elsi_set_pexsi_np_per_pole(elsi_handle handle_c,
                                  int np_per_pole);
void c_elsi_set_pexsi_np_symbo(elsi_handle handle_c,
                               int np_symbo);
void c_elsi_set_pexsi_ordering(elsi_handle handle_c,
                               int ordering);
void c_elsi_set_pexsi_temp(elsi_handle handle_c,
                           double temp);
void c_elsi_set_pexsi_gap(elsi_handle handle_c,
                          double gap);
void c_elsi_set_pexsi_delta_e(elsi_handle handle_c,
                              double delta_e);
void c_elsi_set_pexsi_mu_min(elsi_handle handle_c,
                             double mu_min);
void c_elsi_set_pexsi_mu_max(elsi_handle handle_c,
                             double mu_max);
void c_elsi_set_pexsi_inertia_tol(elsi_handle handle_c,
                                  double inertia_tol);
void c_elsi_set_sips_n_elpa(elsi_handle handle_c,
                            int n_elpa);
void c_elsi_set_sips_n_slice(elsi_handle handle_c,
                             int n_slice);
void c_elsi_set_sips_first_ev(elsi_handle handle_c,
                              int first_ev);