src/elsi_c_interface.f90


   type(c_ptr), value, intent(in) :: handle_c
   type(c_ptr), value, intent(in) :: ham_c
   type(c_ptr), value, intent(in) :: ovlp_c
   type(c_ptr), value, intent(in) :: dm_c
   real(kind=c_double), intent(inout) :: energy

   type(elsi_handle), pointer :: handle_f
   real(kind=c_double), pointer :: ham_f(:)
   real(kind=c_double), pointer :: ovlp_f(:)
   real(kind=c_double), pointer :: dm_f(:)

   integer(kind=c_int) :: nnz_l

   call c_f_pointer(handle_c,handle_f)

   nnz_l = handle_f%bh%nnz_l_sp

   call c_f_pointer(ham_c,ham_f,shape=[nnz_l])
   call c_f_pointer(ovlp_c,ovlp_f,shape=[nnz_l])
   call c_f_pointer(dm_c,dm_f,shape=[nnz_l])

   call elsi_dm_real_sparse(handle_f,ham_f,ovlp_f,dm_f,energy)

end subroutine

subroutine elsi_dm_complex_sparse_c_wrapper(handle_c,ham_c,ovlp_c,dm_c,energy)&
   bind(C,name="c_elsi_dm_complex_sparse")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   type(c_ptr), value, intent(in) :: ham_c
   type(c_ptr), value, intent(in) :: ovlp_c
   type(c_ptr), value, intent(in) :: dm_c
   real(kind=c_double), intent(inout) :: energy

   type(elsi_handle), pointer :: handle_f
   complex(kind=c_double), pointer :: ham_f(:)
   complex(kind=c_double), pointer :: ovlp_f(:)
   complex(kind=c_double), pointer :: dm_f(:)

   integer(kind=c_int) :: nnz_l

   call c_f_pointer(handle_c,handle_f)

   nnz_l = handle_f%bh%nnz_l_sp

   call c_f_pointer(ham_c,ham_f,shape=[nnz_l])
   call c_f_pointer(ovlp_c,ovlp_f,shape=[nnz_l])
   call c_f_pointer(dm_c,dm_f,shape=[nnz_l])

   call elsi_dm_complex_sparse(handle_f,ham_f,ovlp_f,dm_f,energy)

end subroutine

subroutine elsi_set_output_c_wrapper(handle_c,out_level)&
   bind(C,name="c_elsi_set_output")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: out_level

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_output(handle_f,out_level)

end subroutine

subroutine elsi_set_unit_ovlp_c_wrapper(handle_c,unit_ovlp)&
   bind(C,name="c_elsi_set_unit_ovlp")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: unit_ovlp

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_unit_ovlp(handle_f,unit_ovlp)

end subroutine

subroutine elsi_set_zero_def_c_wrapper(handle_c,zero_def)&
   bind(C,name="c_elsi_set_zero_def")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: zero_def

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_zero_def(handle_f,zero_def)

end subroutine

subroutine elsi_set_sing_check_c_wrapper(handle_c,sing_check)&
   bind(C,name="c_elsi_set_sing_check")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: sing_check

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_sing_check(handle_f,sing_check)

end subroutine

subroutine elsi_set_sing_tol_c_wrapper(handle_c,sing_tol)&
   bind(C,name="c_elsi_set_sing_tol")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: sing_tol

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_sing_tol(handle_f,sing_tol)

end subroutine

subroutine elsi_set_sing_stop_c_wrapper(handle_c,sing_stop)&
   bind(C,name="c_elsi_set_sing_stop")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: sing_stop

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_sing_stop(handle_f,sing_stop)

end subroutine

subroutine elsi_set_elpa_solver_c_wrapper(handle_c,elpa_solver)&
   bind(C,name="c_elsi_set_elpa_solver")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: elpa_solver

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_elpa_solver(handle_f,elpa_solver)

end subroutine

subroutine elsi_set_elpa_n_single_c_wrapper(handle_c,n_single)&
   bind(C,name="c_elsi_set_elpa_n_single")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: n_single

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_elpa_n_single(handle_f,n_single)

end subroutine

subroutine elsi_set_elpa_gpu_c_wrapper(handle_c,use_gpu)&
   bind(C,name="c_elsi_set_elpa_gpu")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: use_gpu

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_elpa_gpu(handle_f,use_gpu)

end subroutine

subroutine elsi_set_elpa_gpu_kernels_c_wrapper(handle_c,use_gpu_kernels)&
   bind(C,name="c_elsi_set_elpa_gpu_kernels")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: use_gpu_kernels

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_elpa_gpu_kernels(handle_f,use_gpu_kernels)

end subroutine

subroutine elsi_set_elpa_autotune_c_wrapper(handle_c,use_autotune)&
   bind(C,name="c_elsi_set_elpa_autotune")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: use_autotune

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_elpa_autotune(handle_f,use_autotune)

end subroutine

subroutine elsi_set_omm_flavor_c_wrapper(handle_c,omm_flavor)&
   bind(C,name="c_elsi_set_omm_flavor")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: omm_flavor

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_omm_flavor(handle_f,omm_flavor)

end subroutine

subroutine elsi_set_omm_n_elpa_c_wrapper(handle_c,n_elpa)&
   bind(C,name="c_elsi_set_omm_n_elpa")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: n_elpa

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_omm_n_elpa(handle_f,n_elpa)

end subroutine

subroutine elsi_set_omm_tol_c_wrapper(handle_c,omm_tol)&
   bind(C,name="c_elsi_set_omm_tol")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: omm_tol

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_omm_tol(handle_f,omm_tol)

end subroutine

subroutine elsi_set_pexsi_n_mu_c_wrapper(handle_c,n_mu)&
   bind(C,name="c_elsi_set_pexsi_n_mu")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: n_mu

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_pexsi_n_mu(handle_f,n_mu)

end subroutine

subroutine elsi_set_pexsi_n_pole_c_wrapper(handle_c,n_pole)&
   bind(C,name="c_elsi_set_pexsi_n_pole")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: n_pole

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_pexsi_n_pole(handle_f,n_pole)

end subroutine

subroutine elsi_set_pexsi_np_per_pole_c_wrapper(handle_c,np_per_pole)&
   bind(C,name="c_elsi_set_pexsi_np_per_pole")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: np_per_pole

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_pexsi_np_per_pole(handle_f,np_per_pole)

end subroutine

subroutine elsi_set_pexsi_np_symbo_c_wrapper(handle_c,np_symbo)&
   bind(C,name="c_elsi_set_pexsi_np_symbo")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: np_symbo

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_pexsi_np_symbo(handle_f,np_symbo)

end subroutine

subroutine elsi_set_pexsi_ordering_c_wrapper(handle_c,ordering)&
   bind(C,name="c_elsi_set_pexsi_ordering")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: ordering

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_pexsi_ordering(handle_f,ordering)

end subroutine

subroutine elsi_set_pexsi_temp_c_wrapper(handle_c,temp)&
   bind(C,name="c_elsi_set_pexsi_temp")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: temp

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_pexsi_temp(handle_f,temp)

end subroutine

subroutine elsi_set_pexsi_gap_c_wrapper(handle_c,gap)&
   bind(C,name="c_elsi_set_pexsi_gap")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: gap

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_pexsi_gap(handle_f,gap)

end subroutine

subroutine elsi_set_pexsi_delta_e_c_wrapper(handle_c,delta_e)&
   bind(C,name="c_elsi_set_pexsi_delta_e")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: delta_e

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_pexsi_delta_e(handle_f,delta_e)

end subroutine

subroutine elsi_set_pexsi_mu_min_c_wrapper(handle_c,mu_min)&
   bind(C,name="c_elsi_set_pexsi_mu_min")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: mu_min

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_pexsi_mu_min(handle_f,mu_min)

end subroutine

subroutine elsi_set_pexsi_mu_max_c_wrapper(handle_c,mu_max)&
   bind(C,name="c_elsi_set_pexsi_mu_max")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: mu_max

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_pexsi_mu_max(handle_f,mu_max)

end subroutine

subroutine elsi_set_pexsi_inertia_tol_c_wrapper(handle_c,inertia_tol)&
   bind(C,name="c_elsi_set_pexsi_inertia_tol")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: inertia_tol

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_pexsi_inertia_tol(handle_f,inertia_tol)

end subroutine

subroutine elsi_set_sips_n_elpa_c_wrapper(handle_c,n_elpa)&
   bind(C,name="c_elsi_set_sips_n_elpa")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: n_elpa

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_sips_n_elpa(handle_f,n_elpa)

end subroutine

subroutine elsi_set_sips_n_slice_c_wrapper(handle_c,n_slice)&
   bind(C,name="c_elsi_set_sips_n_slice")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: n_slice

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_sips_n_slice(handle_f,n_slice)

end subroutine

subroutine elsi_set_sips_first_ev_c_wrapper(handle_c,first_ev)&
   bind(C,name="c_elsi_set_sips_first_ev")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: first_ev

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_sips_first_ev(handle_f,first_ev)
